feat: complete web service management and permissions
